--- a/app/views/index.html
+++ b/app/views/index.html
@@ -26,7 +26,7 @@
         <ul class="govuk-list govuk-list--bullet">
           <li><p><a href="MOTR/motr-index" class="govuk-link">MOT reminders</a></p></li>
           <li><p><a href="MOTH/start" class="govuk-link">MOT History</a></p></li>
-          <li><p><a href="DVAMOTH/FirstMOT/start" class="govuk-link">DVA MOTH First MOT</a></p></li>
+          <li><p><a href="dva/firstmot/start" class="govuk-link">DVA MOTH First MOT</a></p></li>
         </ul>
       </div>
       <div class="govuk-grid-column-one-third">
