--- a/app/views/index.html
+++ b/app/views/index.html
@@ -27,6 +27,13 @@
           <li><p><a href="MOTR/motr-index" class="govuk-link">MOT reminders</a></p></li>
           <li><p><a href="MOTH/start" class="govuk-link">MOT History</a></p></li>
           <li><p><a href="dva/firstmot/start" class="govuk-link">DVA MOTH First MOT</a></p></li>
+          <li><p><a href="dva/simple/start" class="govuk-link">DVA MOTH Simple</a></p></li>
+          <li><p><a href="dva/simpleKM/start" class="govuk-link">DVA MOTH Simple KM</a></p></li>
+          <li><p><a href="dva/mixed/start" class="govuk-link">DVA MOTH Mixed</a></p></li>
+          <li><p><a href="dva/mixedkm/start" class="govuk-link">DVA MOTH Mixed KM</a></p></li>
+          <li><p><a href="dva/hgvfirstmot/start" class="govuk-link">DVA MOTH HGV First MOT</a></p></li>
+          <li><p><a href="dva/hgvsimple/start" class="govuk-link">DVA MOTH HGV Simple</a></p></li>
+          <li><p><a href="dva/hgvmixed/start" class="govuk-link">DVA MOTH HGV Mixed</a></p></li>
         </ul>
       </div>
       <div class="govuk-grid-column-one-third">
