--- a/app/views/index.html
+++ b/app/views/index.html
@@ -28,7 +28,7 @@
           <li><p><a href="MOTH/start" class="govuk-link">MOT History</a></p></li>
           <li><p><a href="dva/firstmot/start" class="govuk-link">DVA MOTH First MOT</a></p></li>
           <li><p><a href="dva/simple/start" class="govuk-link">DVA MOTH Simple</a></p></li>
-          <li><p><a href="dva/simpleKM/start" class="govuk-link">DVA MOTH Simple KM</a></p></li>
+          <li><p><a href="dva/simplekm/start" class="govuk-link">DVA MOTH Simple KM</a></p></li>
           <li><p><a href="dva/mixed/start" class="govuk-link">DVA MOTH Mixed</a></p></li>
           <li><p><a href="dva/mixedkm/start" class="govuk-link">DVA MOTH Mixed KM</a></p></li>
           <li><p><a href="dva/hgvfirstmot/start" class="govuk-link">DVA MOTH HGV First MOT</a></p></li>
