--- a/app/views/dva/simple/start.html
+++ b/app/views/dva/simple/start.html
@@ -51,7 +51,7 @@
 
       <p>We will also tell you if the vehicle has an outstanding safety recall.</p>
 
-      <p>You can get results for tests done in England, Scotland or Wales since 2005 for for Northern Ireland since 2017.</p>
+      <p>You can get results for tests done in England, Scotland or Wales since 2005 for Northern Ireland since 2017.</p>
 
       <a href="reg" role="button" draggable="false" class="govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8"  data-module="govuk-button">
         Start now
