New summary pages

--- a/app/views/dva/mixed/summarywarning.html
+++ b/app/views/dva/mixed/summarywarning.html
@@ -43,6 +43,13 @@
     </h1>
     <p><a class="govuk-link--no-visited-state" href="">Get an MOT reminder</a> or <a class="govuk-link--no-visited-state" href="">download test certificates</a> if your vehicle is registered in England, Scotland or Wales.</p>
       <p>If you think the MOT expiry date or any of the vehicle details are wrong, <a class="govuk-link--no-visited-state" href="contact.html">contact DVA</a>.</p>
+      <div class="govuk-warning-text">
+  <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
+  <strong class="govuk-warning-text__text">
+    <span class="govuk-warning-text__assistive">Warning</span>
+    This vehicle has been tested in Northern Ireland and Great Britain. For test history in Great Britain, you will need the V5C to view the test location. Advisory and defect information is not currently available for Northern Ireland.
+  </strong>
+</div>
     </div>
   </div>
 
@@ -71,7 +78,7 @@
             <div class="govuk-grid-row">
                <div class="govuk-grid-column-one-half govuk-!-margin-bottom-5">
                                <span class="govuk-caption-m">Mileage</span>
-                               <h2 class="govuk-heading-s">131,690 km</h2>
+                               <h2 class="govuk-heading-s">131,690 miles</h2>
                                <span class="govuk-caption-m">Test location</span>
                                <details class="govuk-details" data-module="govuk-details" style="margin-bottom: 0px;">
                               <summary class="govuk-details__summary">
@@ -132,7 +139,7 @@
             <div class="govuk-grid-row">
                <div class="govuk-grid-column-one-half govuk-!-margin-bottom-5">
                                <span class="govuk-caption-m">Mileage</span>
-                               <h2 class="govuk-heading-s">131,687 km</h2>
+                               <h2 class="govuk-heading-s">131,687 miles</h2>
                                <span class="govuk-caption-m">Test location</span>
                                <details class="govuk-details" data-module="govuk-details" style="margin-bottom: 0px;">
                               <summary class="govuk-details__summary">
@@ -191,7 +198,7 @@
           </div>
           <div class="govuk-grid-column-one-third govuk-!-margin-bottom-5">
             <span class="govuk-caption-m">Mileage</span>
-            <h2 class="govuk-heading-s">123,248 km</h2>
+            <h2 class="govuk-heading-s">123,248 miles</h2>
             <span class="govuk-caption-m">Test location</span>
             <h2 class="govuk-heading-s">Belfast MOT Test Centre,<br>66 Balmoral Road,<br>Belfast, BT12 6QL</h2>
           </div>
@@ -214,7 +221,7 @@
           </div>
           <div class="govuk-grid-column-one-third govuk-!-margin-bottom-5">
             <span class="govuk-caption-m">Mileage</span>
-            <h2 class="govuk-heading-s">114,567 km</h2>
+            <h2 class="govuk-heading-s">114,567 miles</h2>
             <span class="govuk-caption-m">Test location</span>
             <h2 class="govuk-heading-s">Belfast MOT Test Centre,<br>66 Balmoral Road,<br>Belfast, BT12 6QL</h2>
           </div>
@@ -237,7 +244,7 @@
           </div>
           <div class="govuk-grid-column-one-third govuk-!-margin-bottom-5">
             <span class="govuk-caption-m">Mileage</span>
-            <h2 class="govuk-heading-s">114,120 km</h2>
+            <h2 class="govuk-heading-s">114,120 miles</h2>
             <span class="govuk-caption-m">Test location</span>
             <h2 class="govuk-heading-s">Belfast MOT Test Centre,<br>66 Balmoral Road,<br>Belfast, BT12 6QL</h2>
           </div>
@@ -259,7 +266,7 @@
           </div>
           <div class="govuk-grid-column-one-third govuk-!-margin-bottom-5">
             <span class="govuk-caption-m">Mileage</span>
-            <h2 class="govuk-heading-s">104,976 km</h2>
+            <h2 class="govuk-heading-s">104,976 miles</h2>
             <span class="govuk-caption-m">Test location</span>
             <h2 class="govuk-heading-s">Belfast MOT Test Centre,<br>66 Balmoral Road,<br>Belfast, BT12 6QL</h2>
           </div>
@@ -282,7 +289,7 @@
           </div>
           <div class="govuk-grid-column-one-third govuk-!-margin-bottom-5">
             <span class="govuk-caption-m">Mileage</span>
-            <h2 class="govuk-heading-s">83,345 km</h2>
+            <h2 class="govuk-heading-s">83,345 miles</h2>
             <span class="govuk-caption-m">Test location</span>
             <h2 class="govuk-heading-s">Belfast MOT Test Centre,<br>66 Balmoral Road,<br>Belfast, BT12 6QL</h2>
           </div>
