--- a/app/views/dva/mixed/summarywarningadvisory.html
+++ b/app/views/dva/mixed/summarywarningadvisory.html
@@ -47,7 +47,7 @@
   <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
   <strong class="govuk-warning-text__text">
     <span class="govuk-warning-text__assistive">Warning</span>
-    This vehicle has been tested in Northern Ireland and Great Britain. For test history in Great Britain, you will need the V5C to view the test location.
+    This vehicle has been tested in Northern Ireland and Great Britain. For test location in Great Britain, you will need the V5C to view the test location.
   </strong>
 </div>
     </div>
