--- a/app/views/dva/hgvmixed/summary.html
+++ b/app/views/dva/hgvmixed/summary.html
@@ -42,7 +42,7 @@
       2 November 2022
     </h1>
     <p><a class="govuk-link--no-visited-state" href="https://www.gov.uk/mot-reminder">Get an annual test reminder</a> if your vehicle is registered in England, Scotland or Wales.</p>
-      <p>If you think the MOT expiry date or any of the vehicle details are wrong, <a class="govuk-link--no-visited-state" href="contact.html">contact DVA</a>.</p>
+      <p>If you think the MOT expiry date or any of the vehicle details are wrong, <a class="govuk-link--no-visited-state" href="contact.html">contact DVA</a> for tests carried out in Northern Ireland and <a class="govuk-link--no-visited-state" href="contactdvsa.html">contact DVSA</a> for tests carried out Great Britain.</p>
     </div>
   </div>
 
