--- a/app/views/dva/firstmot/summaryfirstmot.html
+++ b/app/views/dva/firstmot/summaryfirstmot.html
@@ -91,7 +91,7 @@
       <div id="accordion-default-content-2" class="govuk-accordion__section-content" aria-labelledby="accordion-default-heading-2">
         <h2 class="govuk-heading-l" style="color:#00703c;">No outstanding safety recalls found</h2>
           </strong>
-        <p class='govuk-body'>This information is provided by the vehicle manufacturer. If you think this information is wrong, contact the vehicle manufactrer's dealership. `please do not contact the DVSA, as we are not able to change the recall status.</p>
+        <p class='govuk-body'>This information is provided by the vehicle manufacturer. If you think this information is wrong, contact the vehicle manufacturer's dealership. Please do not contact the DVSA, as we are not able to change the recall status.</p>
         <p>Was this vehicle recall information useful to you? <a class="govuk-link--no-visited-state" href="#">Tell us your views</a> so we can improve the service. </p>
       </div>
     </div>
