--- a/app/views/dva/mixed/contact.html
+++ b/app/views/dva/mixed/contact.html
@@ -10,13 +10,7 @@
 {% endblock %}
 
 {% block beforeContent %}
-  <div class="govuk-breadcrumbs govuk-breadcrumbs--collapse-on-mobile">
-    <ol class="govuk-breadcrumbs__list">
-      <li class="govuk-breadcrumbs__list-item"><a class="govuk-breadcrumbs__link" href="#">Home</a></li>
-      <li class="govuk-breadcrumbs__list-item"><a class="govuk-breadcrumbs__link" href="#">Driving and transport</a></li>
-      <li class="govuk-breadcrumbs__list-item"><a class="govuk-breadcrumbs__link" href="#">Driving tests and learning to drive or ride</a></li>
-    </ol>
-  </div>
+  <a class="govuk-back-link" href="javascript:window.history.back()">Back</a>
 {% endblock %}
 
 {% block content %}
@@ -25,7 +19,7 @@
     <div class="govuk-grid-column-two-thirds">
 
         <span class="govuk-caption-l">Contact DVA</span>
-          <h1 class="govuk-heading-l">Driver & Vehicle Agency - driver licensing & vehicle testing</h1>
+          <h1 class="govuk-heading-l">Driver & Vehicle Agency</h1>
 
           <p>Find out more <a href="#">about MOTs</a>.</p>
 
@@ -37,29 +31,10 @@
           </p>
 
           <div class="govuk-inset-text">
-            You can <a href="#">give feedback</a> about the service that you were given after you’ve contacted DVSA.
+            Help us improve our service by telling us <a href="#">what you think</a>.
           </div>
 
-          <br>
-          <h1 class="govuk-heading-m">Your answers</h1>
 
-          <p><a href="#">Start again</a></p>
-
-        <dl class="govuk-summary-list govuk-!-margin-bottom-9">
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-              1. What do you want to contact DVA about?
-            </dt>
-            <dd class="govuk-summary-list__value">
-              MOT, vehicle tests and approval
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">
-                Change<span class="govuk-visually-hidden"> name</span>
-              </a>
-            </dd>
-          </div>
-        </dl>
 
 
     </div>
