--- a/app/views/dva/mixed/contactdvsa.html
+++ b/app/views/dva/mixed/contactdvsa.html
@@ -18,20 +18,20 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-        <span class="govuk-caption-l">Contact DVA</span>
-          <h1 class="govuk-heading-l">Driver & Vehicle Agency</h1>
+        <span class="govuk-caption-l">Contact DVSA</span>
+          <h1 class="govuk-heading-l">MOT, vehicle testing and approval enquiries</h1>
 
           <p>Find out more <a href="#">about MOTs</a>.</p>
 
-          <p style="border-left: 1px solid #b1b4b6;padding-left:15px">Driver & Vehicle Agency
-            <br><a href="#">dva@infrastructure-ni.gov.uk</a>
-            <br>Telephone: 0300 200 7861
+          <p style="border-left: 1px solid #b1b4b6;padding-left:15px">MOT, vehicle testing and approval
+            <br><a href="#">enquiries@dvsa.gov.uk</a>
+            <br>Telephone: 0300 123 9000
             <br>Monday to Friday, 7:30am to 6pm
             <br><a href="#">Find out about call charges</a>
           </p>
 
           <div class="govuk-inset-text">
-            Help us improve our service by telling us <a href="#">what you think</a>.
+            You can <a href="#">give feedback</a> about the service that you were given after you've contacted the DVSA.
           </div>
 
 
