--- a/app/views/dva/mixed/reg.html
+++ b/app/views/dva/mixed/reg.html
@@ -13,7 +13,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <form class="form" <a href=""action="summary" method="post"a>
+      <form class="form" <a href=""action="summarywarningadvisory" method="post"a>
 
         <div class="govuk-form-group">
           <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--l" for="event-name">
@@ -27,7 +27,7 @@
               </label>
             </h2>
             <div id="account-number-hint" class="govuk-hint">
-              For example, CU57ABC or ABC1234 for vehicles registered in Northern Ireland
+              For example, CU57ABC or ABC1234
             </div>
             <input class="govuk-input govuk-input--width-10" id="account-number" name="account-number" type="text" spellcheck="false" >
           </div>
