--- a/app/views/dva/mixed/summarywarningadvisory.html
+++ b/app/views/dva/mixed/summarywarningadvisory.html
@@ -42,12 +42,12 @@
       17 September 2022
     </h1>
     <p><a class="govuk-link--no-visited-state" href="">Get an MOT reminder</a> or <a class="govuk-link--no-visited-state" href="">download test certificates</a> if your vehicle is registered in England, Scotland or Wales.</p>
-      <p>If you think the MOT expiry date or any of the vehicle details are wrong, <a class="govuk-link--no-visited-state" href="contact.html">contact DVA</a>.</p>
+      <p>If you think the MOT expiry date or any of the vehicle details are wrong, <a class="govuk-link--no-visited-state" href="contact.html">contact DVA</a> for tests carried out in Northern Ireland and <a class="govuk-link--no-visited-state" href="contactdvsa.html">contact DVSA</a> for tests carried out Great Britain.</p>
       <div class="govuk-warning-text">
   <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
   <strong class="govuk-warning-text__text">
     <span class="govuk-warning-text__assistive">Warning</span>
-    This vehicle has been tested in Northern Ireland and Great Britain. For test location in Great Britain, you will need the V5C to view the test location.
+    MOT test location, defect and advisory information is not available for vehicles tested in Northern Ireland.
   </strong>
 </div>
     </div>
@@ -119,7 +119,7 @@
                     </span>
                   </summary>
                   <div class="govuk-details__text">
-                    Advisories are captured and given for guidance in England, Scotland & Wales. Some of these may need to be monitored in case they become more serious and need immediate repairs.
+                    Advisories are given for guidance. Some of these may need to be monitored in case they become more serious and need immediate repairs.
                   </div>
                 </details>
               </div>
@@ -202,7 +202,7 @@
                                <span class="govuk-caption-m">Mileage</span>
                                <h2 class="govuk-heading-s">123,248 miles</h2>
                                <span class="govuk-caption-m">Test location</span>
-            <h2 class="govuk-heading-s">Belfast MOT Test Centre,<br>66 Balmoral Road,<br>Belfast, BT12 6QL</h2>
+            <h2 class="govuk-heading-s">Unavailable for Northern Ireland</h2>
                </div>
                <div class="govuk-grid-column-one-half">
                                <span class="govuk-caption-m">MOT test number</span>
@@ -213,9 +213,9 @@
             </div>
             <div class="govuk-grid-row">
               <div class="govuk-grid-column-full">
-                <span class="govuk-caption-m">Monitor and repair if necessary (advisories):</span>
+                <span class="govuk-caption-m">Advisory and defect information:</span>
                 <ul class="govuk-list govuk-list--bullet govuk-!-font-weight-bold">
-                  <li class="govuk-!-margin-bottom-0">This information is currently unavailable for MOT tests carried out in Northern Ireland</li>
+                  <li class="govuk-!-margin-bottom-0">We don't hold this information for MOT tests carried out in Northern Ireland. If you're the vehicle owner, please refer to your MOT certificate.</li>
                 </ul>
                 <details class="govuk-details" data-module="govuk-details">
                   <summary class="govuk-details__summary">
@@ -224,7 +224,7 @@
                     </span>
                   </summary>
                   <div class="govuk-details__text">
-                    Advisories are captured and given for guidance in England, Scotland & Wales. Some of these may need to be monitored in case they become more serious and need immediate repairs.
+                    Advisories are given for guidance. Some of these may need to be monitored in case they become more serious and need immediate repairs.
                   </div>
                 </details>
               </div>
@@ -246,7 +246,7 @@
                                <span class="govuk-caption-m">Mileage</span>
                                <h2 class="govuk-heading-s">114,567 miles</h2>
                                <span class="govuk-caption-m">Test location</span>
-            <h2 class="govuk-heading-s">Belfast MOT Test Centre,<br>66 Balmoral Road,<br>Belfast, BT12 6QL</h2>
+            <h2 class="govuk-heading-s">Unavailable for Northern Ireland</h2>
                </div>
                <div class="govuk-grid-column-one-half">
                                <span class="govuk-caption-m">MOT test number</span>
@@ -257,9 +257,9 @@
             </div>
             <div class="govuk-grid-row">
               <div class="govuk-grid-column-full">
-                <span class="govuk-caption-m">Monitor and repair if necessary (advisories):</span>
+                <span class="govuk-caption-m">Advisory and defect information:</span>
                 <ul class="govuk-list govuk-list--bullet govuk-!-font-weight-bold">
-                  <li class="govuk-!-margin-bottom-0">This information is currently unavailable for MOT tests carried out in Northern Ireland</li>
+                  <li class="govuk-!-margin-bottom-0">We don't hold this information for MOT tests carried out in Northern Ireland. If you're the vehicle owner, please refer to your MOT certificate.</li>
                 </ul>
                 <details class="govuk-details" data-module="govuk-details">
                   <summary class="govuk-details__summary">
@@ -268,7 +268,7 @@
                     </span>
                   </summary>
                   <div class="govuk-details__text">
-                    Advisories are captured and given for guidance in England, Scotland & Wales. Some of these may need to be monitored in case they become more serious and need immediate repairs.
+                    Advisories are given for guidance. Some of these may need to be monitored in case they become more serious and need immediate repairs.
                   </div>
                 </details>
               </div>
@@ -290,7 +290,7 @@
                                <span class="govuk-caption-m">Mileage</span>
                                <h2 class="govuk-heading-s">114,120 miles</h2>
                                <span class="govuk-caption-m">Test location</span>
-            <h2 class="govuk-heading-s">Belfast MOT Test Centre,<br>66 Balmoral Road,<br>Belfast, BT12 6QL</h2>
+            <h2 class="govuk-heading-s">Unavailable for Northern Ireland</h2>
                </div>
                <div class="govuk-grid-column-one-half">
                                <span class="govuk-caption-m">MOT test number</span>
@@ -300,9 +300,9 @@
             </div>
             <div class="govuk-grid-row">
               <div class="govuk-grid-column-full">
-                <span class="govuk-caption-m">Do not drive until repaired (dangerous defects):</span>
+                <span class="govuk-caption-m">Advisory and defect information:</span>
                 <ul class="govuk-list govuk-list--bullet govuk-!-font-weight-bold">
-                  <li class="govuk-!-margin-bottom-0">This information is currently unavailable for MOT tests carried out in Northern Ireland</li>
+                  <li class="govuk-!-margin-bottom-0">We don't hold this information for MOT tests carried out in Northern Ireland. If you're the vehicle owner, please refer to your MOT certificate.</li>
                 </ul>
                 <details class="govuk-details" data-module="govuk-details">
                   <summary class="govuk-details__summary">
@@ -334,7 +334,7 @@
                                <span class="govuk-caption-m">Mileage</span>
                                <h2 class="govuk-heading-s">104,976 miles</h2>
                                <span class="govuk-caption-m">Test location</span>
-            <h2 class="govuk-heading-s">Belfast MOT Test Centre,<br>66 Balmoral Road,<br>Belfast, BT12 6QL</h2>
+            <h2 class="govuk-heading-s">Unavailable for Northern Ireland</h2>
                </div>
                <div class="govuk-grid-column-one-half">
                                <span class="govuk-caption-m">MOT test number</span>
@@ -345,9 +345,9 @@
             </div>
             <div class="govuk-grid-row">
               <div class="govuk-grid-column-full">
-                <span class="govuk-caption-m">Monitor and repair if necessary (advisories):</span>
+                <span class="govuk-caption-m">Advisory and defect information:</span>
                 <ul class="govuk-list govuk-list--bullet govuk-!-font-weight-bold">
-                  <li class="govuk-!-margin-bottom-0">This information is currently unavailable for MOT tests carried out in Northern Ireland</li>
+                  <li class="govuk-!-margin-bottom-0">We don't hold this information for MOT tests carried out in Northern Ireland. If you're the vehicle owner, please refer to your MOT certificate.</li>
                 </ul>
                 <details class="govuk-details" data-module="govuk-details">
                   <summary class="govuk-details__summary">
@@ -356,7 +356,7 @@
                     </span>
                   </summary>
                   <div class="govuk-details__text">
-                    Advisories are captured and given for guidance in England, Scotland & Wales. Some of these may need to be monitored in case they become more serious and need immediate repairs.
+                    Advisories are given for guidance. Some of these may need to be monitored in case they become more serious and need immediate repairs.
                   </div>
                 </details>
               </div>
@@ -378,7 +378,7 @@
                                <span class="govuk-caption-m">Mileage</span>
                                <h2 class="govuk-heading-s">83,345 miles</h2>
                                <span class="govuk-caption-m">Test location</span>
-            <h2 class="govuk-heading-s">Belfast MOT Test Centre,<br>66 Balmoral Road,<br>Belfast, BT12 6QL</h2>
+            <h2 class="govuk-heading-s">Unavailable for Northern Ireland</h2>
                </div>
                <div class="govuk-grid-column-one-half">
                                <span class="govuk-caption-m">MOT test number</span>
@@ -389,9 +389,9 @@
             </div>
             <div class="govuk-grid-row">
               <div class="govuk-grid-column-full">
-                <span class="govuk-caption-m">Monitor and repair if necessary (advisories):</span>
+                <span class="govuk-caption-m">Advisory and defect information:</span>
                 <ul class="govuk-list govuk-list--bullet govuk-!-font-weight-bold">
-                  <li class="govuk-!-margin-bottom-0">This information is currently unavailable for MOT tests carried out in Northern Ireland</li>
+                  <li class="govuk-!-margin-bottom-0">We don't hold this information for MOT tests carried out in Northern Ireland. If you're the vehicle owner, please refer to your MOT certificate.</li>
                 </ul>
                 <details class="govuk-details" data-module="govuk-details">
                   <summary class="govuk-details__summary">
@@ -400,8 +400,7 @@
                     </span>
                   </summary>
                   <div class="govuk-details__text">
-                    Advisories are captured and given for guidance in England, Scotland & Wales. Some of these may need to be monitored in case they become more serious and need immediate repairs.
-                  </div>
+                    Advisories are given for guidance. Some of these may need to be monitored in case they become more serious and need immediate repairs.
                 </details>
               </div>
             </div>
@@ -424,7 +423,7 @@
       </div>
       <div id="accordion-default-content-2" class="govuk-accordion__section-content" aria-labelledby="accordion-default-heading-2">
         <h2 class="govuk-heading-l" style="color:#00703c;">No outstanding safety recalls found</h2>
-        <p class='govuk-body'>This information is provided by the vehicle manufacturer. If you think this information is wrong, contact the vehicle manufactrer's dealership. `please do not contact the DVSA, as we are not able to change the recall status.</p>
+        <p class='govuk-body'>This information is provided by the vehicle manufacturer. If you think this information is wrong, contact the vehicle manufacturer's dealership. Please do not contact the DVSA, as we are not able to change the recall status.</p>
         <p>Was this vehicle recall information useful to you? <a class="govuk-link--no-visited-state" href="#">Tell us your views</a> so we can improve the service. </p>
       </div>
     </div>
