--- a/app/views/dva/simple/reg.html
+++ b/app/views/dva/simple/reg.html
@@ -27,7 +27,7 @@
               </label>
             </h2>
             <div id="account-number-hint" class="govuk-hint">
-              For example, CU57ABC or ABC1234 for vehicles registered in Northern Ireland
+              For example, CU57ABC or ABC1234
             </div>
             <input class="govuk-input govuk-input--width-10" id="account-number" name="account-number" type="text" spellcheck="false" >
           </div>
