--- a/app/views/dva/hgvfirstmot/summaryfirstmot.html
+++ b/app/views/dva/hgvfirstmot/summaryfirstmot.html
@@ -12,7 +12,7 @@
 
   <div class="govuk-grid-row govuk-!-margin-bottom-4">
     <div class="govuk-grid-column-two-thirds">
-      <span class="govuk-caption-xl">ABC1234</span>
+      <span class="govuk-caption-xl">BTZ 1999</span>
       <h1 class="govuk-heading-xl govuk-!-margin-bottom-6">
         STANFORD COACHWORKS VAN CONVERSION
       </h1>
