--- a/app/views/dva/hgvmixed/contact.html
+++ b/app/views/dva/hgvmixed/contact.html
@@ -24,9 +24,9 @@
           <p>Find out more <a href="#">about MOTs</a>.</p>
 
           <p style="border-left: 1px solid #b1b4b6;padding-left:15px">Driver & Vehicle Agency
-            <br><a href="#">dva@infrastructure-ni.gov.uk</a>
+            <br><a href="#">dva.customerservices@infrastructure-ni.gov.uk</a>
             <br>Telephone: 0300 200 7861
-            <br>Monday to Friday, 7:30am to 6pm
+            <br>Monday to Friday, 08.45am to 16.55pm
             <br><a href="#">Find out about call charges</a>
           </p>
 
