--- a/app/views/dva/hgvmixed/summary.html
+++ b/app/views/dva/hgvmixed/summary.html
@@ -12,7 +12,7 @@
 
   <div class="govuk-grid-row govuk-!-margin-bottom-4">
     <div class="govuk-grid-column-two-thirds">
-      <span class="govuk-caption-xl">ABC1234</span>
+      <span class="govuk-caption-xl">BTZ 1999</span>
       <h1 class="govuk-heading-xl govuk-!-margin-bottom-6">
         STANFORD COACHWORKS VAN CONVERSION
       </h1>
@@ -41,10 +41,15 @@
     <h1 class="govuk-heading-l govuk-!-margin-bottom-6">
       2 November 2022
     </h1>
-    <p><a class="govuk-link--no-visited-state" href="https://www.gov.uk/mot-reminder">Get an annual test reminder</a> if your vehicle is registered in England, Scotland or Wales.</p>
-      <p>If you think the MOT expiry date or any of the vehicle details are wrong, <a class="govuk-link--no-visited-state" href="contact.html">contact DVA</a> for tests carried out in Northern Ireland and <a class="govuk-link--no-visited-state" href="contactdvsa.html">contact DVSA</a> for tests carried out Great Britain.</p>
+    <p><a class="govuk-link--no-visited-state" href="">Get an annual test reminder</a> if your vehicle is registered in Great Britain (England, Scotland or Wales).</p>
+      <p>If you think the MOT expiry date or any of the vehicle details are wrong:<ul class="govuk-list govuk-list--bullet govuk"><li> <a class="govuk-link--no-visited-state" href="contact.html">contact DVA</a> for tests carried out in Northern Ireland<li> <a class="govuk-link--no-visited-state" href="contactdvsa.html">contact DVSA</a> for tests carried out in Great Brtitain</ul></p>
+      <div class="govuk-inset-text">
+        <p>The mileage recorded at test is not currently available for heavy goods and public service vehicles.<br> It can take up to 10 working days for the latest test results to appear.</p>
+  <p>Test failure information is not available for vehicles tested in Northern Ireland.</p>
+</div>
     </div>
   </div>
+
 
 
   <div class="govuk-accordion" data-module="govuk-accordion" id="accordion-default">
@@ -71,7 +76,7 @@
             <span class="govuk-caption-m">Test certificate number</span>
             <h2 class="govuk-heading-s">W123456789</h2>
             <span class="govuk-caption-m">Test location</span>
-            <h2 class="govuk-heading-s">Unavailable until further notice</h2>
+            <h2 class="govuk-heading-s">Unavailable until further notice for tests carried out in Great Britain</h2>
           </div>
           <div class="govuk-grid-column-one-third">
 
@@ -93,16 +98,23 @@
         <span class="govuk-caption-m">Test certificate number</span>
         <h2 class="govuk-heading-s">Not applicable</h2>
         <span class="govuk-caption-m">Test location</span>
-        <h2 class="govuk-heading-s">Unavailable until further notice</h2>
+        <h2 class="govuk-heading-s">Unavailable until further notice for tests carried out in Great Britain</h2>
         <span class="govuk-caption-m">Reason(s) for failure:</span>
         <ul class="govuk-list govuk-list--bullet govuk-!-font-weight-bold">
         <li class="govuk-!-margin-bottom-0">Brake Systems and Components</li>
-        </ul>
-        <a class="govuk-link--no-visited-state" href="#">What are defects?</a>
+      </ul>
+      <details class="govuk-details" data-module="govuk-details">
+        <summary class="govuk-details__summary">
+          <span class="govuk-details__summary-text">
+            What are failures?
+          </span>
+        </summary>
+        <div class="govuk-details__text">
+          Failure items must be fixed before the vehicle can pass its annual test.
         </div>
-        <div class="govuk-grid-column-one-third">
-        </div>
-        </div>
+      </details>
+    </div>
+  </div>
         <!--End MOT test-->
 
         <!--Start MOT test-->
