--- a/app/views/dva/hgvsimple/summary.html
+++ b/app/views/dva/hgvsimple/summary.html
@@ -12,7 +12,7 @@
 
   <div class="govuk-grid-row govuk-!-margin-bottom-4">
     <div class="govuk-grid-column-two-thirds">
-      <span class="govuk-caption-xl">ABC1234</span>
+      <span class="govuk-caption-xl">BTZ 1999</span>
       <h1 class="govuk-heading-xl govuk-!-margin-bottom-6">
         STANFORD COACHWORKS VAN CONVERSION
       </h1>
@@ -42,6 +42,9 @@
       2 November 2022
     </h1>
       <p>If you think the MOT expiry date or any of the vehicle details are wrong, <a class="govuk-link--no-visited-state" href="contact.html">contact DVA</a>.</p>
+      <div class="govuk-inset-text">
+  MOT test location, defect and advisory information is not available for vehicles tested in Northern Ireland.
+</div>
     </div>
   </div>
 
@@ -89,7 +92,7 @@
           </div>
           <div class="govuk-grid-column-one-third govuk-!-margin-bottom-5">
             <span class="govuk-caption-m">Test certificate number</span>
-            <h2 class="govuk-heading-s">W123456789</h2>
+            <h2 class="govuk-heading-s">Not Applicable</h2>
             <span class="govuk-caption-m">Test location</span>
             <h2 class="govuk-heading-s">Belfast MOT Test Centre,<br>66 Balmoral Road,<br>Belfast, BT12 6QL</h2>
           </div>
