--- a/app/views/dva/hgvsimple/reg.html
+++ b/app/views/dva/hgvsimple/reg.html
@@ -45,7 +45,7 @@
           <div class="govuk-details__text">
             Enter the trailer identification number to search for HGV trailer history.</p>
 
-            <p>For example, C236718 or A787121.</p>
+            <p>For example, C236718 or A787121 or NI/049095/06.</p>
           </div>
         </details>
 
