--- a/app/views/dva/mixed/summaryinsetadvisory.html
+++ b/app/views/dva/mixed/summaryinsetadvisory.html
@@ -363,9 +363,8 @@
         </div>
       </div>
       <div id="accordion-default-content-2" class="govuk-accordion__section-content" aria-labelledby="accordion-default-heading-2">
-        <h2 class="govuk-heading-l" style="color:#00703c;">No outstanding safety recalls found</h2>
-        <p class='govuk-body'>This information is provided by the vehicle manufacturer. If you think this information is wrong, contact the vehicle manufacturer's dealership. Please do not contact the DVSA, as we are not able to change the recall status.</p>
-        <p>Was this vehicle recall information useful to you? <a class="govuk-link--no-visited-state" href="#">Tell us your views</a> so we can improve the service. </p>
+        <h2 class="govuk-heading-l" style="color:#00703c;">No safety recalls found.</h2>
+        <p class='govuk-body'>This information is provided by the vehicle manufacturer. If you think the recall information is wrong, contact your local VAUXHALL dealership.</p>
       </div>
     </div>
   </div>
