--- a/app/views/dva/mixedkm/summary.html
+++ b/app/views/dva/mixedkm/summary.html
@@ -41,8 +41,11 @@
     <h1 class="govuk-heading-l govuk-!-margin-bottom-6">
       17 September 2022
     </h1>
-    <p><a class="govuk-link--no-visited-state" href="">Get an MOT reminder</a> or <a class="govuk-link--no-visited-state" href="">download test certificates</a> if your vehicle is registered in England, Scotland or Wales.</p>
-      <p>If you think the MOT expiry date or any of the vehicle details are wrong, <a class="govuk-link--no-visited-state" href="contact.html">contact DVA</a>.</p>
+    <p><a class="govuk-link--no-visited-state" href="">Get an MOT reminder</a> or <a class="govuk-link--no-visited-state" href="">download test certificates</a> if your vehicle is registered in Great Britain (England, Scotland or Wales).</p>
+      <p>If you think the MOT expiry date or any of the vehicle details are wrong:<ul class="govuk-list govuk-list--bullet govuk"><li> <a class="govuk-link--no-visited-state" href="contact.html">contact DVA</a> for tests carried out in Northern Ireland<li> <a class="govuk-link--no-visited-state" href="contactdvsa.html">contact DVSA</a> for tests carried out in Great Brtitain</ul></p>
+      <div class="govuk-inset-text">
+  MOT test location, defect and advisory information is not available for vehicles tested in Northern Ireland.
+</div>
     </div>
   </div>
 
@@ -184,115 +187,165 @@
         <!--Start MOT test-->
         <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
         <div class="govuk-grid-row">
-          <div class="govuk-grid-column-one-third">
-            <span class="govuk-caption-m">Date tested</span>
-            <h2 class="govuk-heading-s govuk-!-margin-bottom-1">13 January 2020</h2>
-            <h2 class="govuk-heading-xl" style="color:#00703c;">PASS</h2>
-          </div>
-          <div class="govuk-grid-column-one-third govuk-!-margin-bottom-5">
-            <span class="govuk-caption-m">Mileage</span>
-            <h2 class="govuk-heading-s">123,248 km</h2>
-            <span class="govuk-caption-m">Test location</span>
-            <h2 class="govuk-heading-s">Belfast MOT Test Centre,<br>66 Balmoral Road,<br>Belfast, BT12 6QL</h2>
-          </div>
-          <div class="govuk-grid-column-one-third">
-            <span class="govuk-caption-m">MOT test number</span>
-            <h2 class="govuk-heading-s">4901 5248 5547</h2>
-            <span class="govuk-caption-m">Expiry date</span>
-            <h2 class="govuk-heading-s">10 February 2021</h2>
-          </div>
-        </div>
+               <div class="govuk-grid-column-one-third">
+                               <span class="govuk-caption-m">Date tested</span>
+                               <h2 class="govuk-heading-s govuk-!-margin-bottom-1">20 September 2020</h2>
+                               <h2 class="govuk-heading-xl" style="color:#00703c;">PASS</h2>
+               </div>
+          <div class="govuk-grid-column-two-thirds">
+            <div class="govuk-grid-row">
+               <div class="govuk-grid-column-one-half govuk-!-margin-bottom-5">
+                               <span class="govuk-caption-m">Mileage</span>
+                               <h2 class="govuk-heading-s">123,248 km</h2>
+                               <span class="govuk-caption-m">Test location</span>
+            <h2 class="govuk-heading-s">Not available for tests carried out in Northern Ireland</h2>
+               </div>
+               <div class="govuk-grid-column-one-half">
+                               <span class="govuk-caption-m">MOT test number</span>
+                               <h2 class="govuk-heading-s">5620 3268 4189</h2>
+                               <span class="govuk-caption-m">Expiry date</span>
+                               <h2 class="govuk-heading-s">19 September 2021</h2>
+               </div>
+            </div>
+            <div class="govuk-grid-row">
+              <div class="govuk-grid-column-full">
+                <span class="govuk-caption-m">Advisory and defect information is not available.</span>
+                <ul class="govuk-list govuk-!-font-weight-bold">
+                  <li class="govuk-!-margin-bottom-0">This information is not available for Northern Ireland. Check your MOT certificate to see this information if you are the vehicle owner.</li>
+              </div>
+            </div>
+        </div><hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible"></div>
         <!--End MOT test-->
 
         <!--Start MOT test-->
         <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
         <div class="govuk-grid-row">
-          <div class="govuk-grid-column-one-third">
-            <span class="govuk-caption-m">Date tested</span>
-            <h2 class="govuk-heading-s govuk-!-margin-bottom-1">11 February 2019</h2>
-            <h2 class="govuk-heading-xl" style="color:#00703c;">PASS</h2>
-          </div>
-          <div class="govuk-grid-column-one-third govuk-!-margin-bottom-5">
-            <span class="govuk-caption-m">Mileage</span>
-            <h2 class="govuk-heading-s">114,567 km</h2>
-            <span class="govuk-caption-m">Test location</span>
-            <h2 class="govuk-heading-s">Belfast MOT Test Centre,<br>66 Balmoral Road,<br>Belfast, BT12 6QL</h2>
-          </div>
-          <div class="govuk-grid-column-one-third">
-            <span class="govuk-caption-m">MOT test number</span>
-            <h2 class="govuk-heading-s">4901 5248 5547</h2>
-            <span class="govuk-caption-m">Expiry date</span>
-            <h2 class="govuk-heading-s">10 February 2020</h2>
-          </div>
-        </div>
+               <div class="govuk-grid-column-one-third">
+                               <span class="govuk-caption-m">Date tested</span>
+                               <h2 class="govuk-heading-s govuk-!-margin-bottom-1">12 September 2019</h2>
+                               <h2 class="govuk-heading-xl" style="color:#00703c;">PASS</h2>
+               </div>
+          <div class="govuk-grid-column-two-thirds">
+            <div class="govuk-grid-row">
+               <div class="govuk-grid-column-one-half govuk-!-margin-bottom-5">
+                               <span class="govuk-caption-m">Mileage</span>
+                               <h2 class="govuk-heading-s">114,567 km</h2>
+                               <span class="govuk-caption-m">Test location</span>
+            <h2 class="govuk-heading-s">Not available for tests carried out in Northern Ireland</h2>
+               </div>
+               <div class="govuk-grid-column-one-half">
+                               <span class="govuk-caption-m">MOT test number</span>
+                               <h2 class="govuk-heading-s">5620 3268 4189</h2>
+                               <span class="govuk-caption-m">Expiry date</span>
+                               <h2 class="govuk-heading-s">13 September 2020</h2>
+                             </div>
+                          </div>
+                          <div class="govuk-grid-row">
+                            <div class="govuk-grid-column-full">
+                              <span class="govuk-caption-m">Advisory and defect information is not available.</span>
+                              <ul class="govuk-list govuk-!-font-weight-bold">
+                                <li class="govuk-!-margin-bottom-0">This information is not available for Northern Ireland. Check your MOT certificate to see this information if you are the vehicle owner.</li>
+                            </div>
+                          </div>
+                      </div><hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible"></div>
         <!--End MOT test-->
 
         <!--Start MOT test-->
         <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
         <div class="govuk-grid-row">
-          <div class="govuk-grid-column-one-third">
-            <span class="govuk-caption-m">Date tested</span>
-            <h2 class="govuk-heading-s govuk-!-margin-bottom-1">4 February 2019</h2>
-            <h2 class="govuk-heading-xl" style="color:#b10e1e;">FAIL</h2>
-          </div>
-          <div class="govuk-grid-column-one-third govuk-!-margin-bottom-5">
-            <span class="govuk-caption-m">Mileage</span>
-            <h2 class="govuk-heading-s">114,120 km</h2>
-            <span class="govuk-caption-m">Test location</span>
-            <h2 class="govuk-heading-s">Belfast MOT Test Centre,<br>66 Balmoral Road,<br>Belfast, BT12 6QL</h2>
-          </div>
-          <div class="govuk-grid-column-one-third">
-            <span class="govuk-caption-m">MOT test number</span>
-            <h2 class="govuk-heading-s">4345 5678 5647</h2>
-          </div>
-        </div>
+               <div class="govuk-grid-column-one-third">
+                               <span class="govuk-caption-m">Date tested</span>
+                               <h2 class="govuk-heading-s govuk-!-margin-bottom-1">10 September 2019</h2>
+                               <h2 class="govuk-heading-xl" style="color:#b10e1e;">FAIL</h2>
+               </div>
+          <div class="govuk-grid-column-two-thirds">
+            <div class="govuk-grid-row">
+               <div class="govuk-grid-column-one-half govuk-!-margin-bottom-5">
+                               <span class="govuk-caption-m">Mileage</span>
+                               <h2 class="govuk-heading-s">114,120 km</h2>
+                               <span class="govuk-caption-m">Test location</span>
+            <h2 class="govuk-heading-s">Not available for tests carried out in Northern Ireland</h2>
+               </div>
+               <div class="govuk-grid-column-one-half">
+                               <span class="govuk-caption-m">MOT test number</span>
+                               <h2 class="govuk-heading-s">4901 5248 5547</h2>
+                             </div>
+                          </div>
+                          <div class="govuk-grid-row">
+                            <div class="govuk-grid-column-full">
+                              <span class="govuk-caption-m">Advisory and defect information is not available.</span>
+                              <ul class="govuk-list govuk-!-font-weight-bold">
+                                <li class="govuk-!-margin-bottom-0">This information is not available for Northern Ireland. Check your MOT certificate to see this information if you are the vehicle owner.</li>
+                            </div>
+                          </div>
+                      </div><hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible"></div>
         <!--End MOT test-->
 
 
         <!--Start MOT test-->
         <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
         <div class="govuk-grid-row">
-          <div class="govuk-grid-column-one-third">
-            <span class="govuk-caption-m">Date tested</span>
-            <h2 class="govuk-heading-s govuk-!-margin-bottom-1">15 January 2018</h2>
-            <h2 class="govuk-heading-xl" style="color:#00703c;">PASS</h2>
-          </div>
-          <div class="govuk-grid-column-one-third govuk-!-margin-bottom-5">
-            <span class="govuk-caption-m">Mileage</span>
-            <h2 class="govuk-heading-s">104,976 km</h2>
-            <span class="govuk-caption-m">Test location</span>
-            <h2 class="govuk-heading-s">Belfast MOT Test Centre,<br>66 Balmoral Road,<br>Belfast, BT12 6QL</h2>
-          </div>
-          <div class="govuk-grid-column-one-third">
-            <span class="govuk-caption-m">MOT test number</span>
-            <h2 class="govuk-heading-s">6789 4556 0943</h2>
-            <span class="govuk-caption-m">Expiry date</span>
-            <h2 class="govuk-heading-s">19 January 2019</h2>
-          </div>
-        </div>
+               <div class="govuk-grid-column-one-third">
+                               <span class="govuk-caption-m">Date tested</span>
+                               <h2 class="govuk-heading-s govuk-!-margin-bottom-1">18 September 2018</h2>
+                               <h2 class="govuk-heading-xl" style="color:#00703c;">PASS</h2>
+               </div>
+          <div class="govuk-grid-column-two-thirds">
+            <div class="govuk-grid-row">
+               <div class="govuk-grid-column-one-half govuk-!-margin-bottom-5">
+                               <span class="govuk-caption-m">Mileage</span>
+                               <h2 class="govuk-heading-s">104,976 km</h2>
+                               <span class="govuk-caption-m">Test location</span>
+            <h2 class="govuk-heading-s">Not available for tests carried out in Northern Ireland</h2>
+               </div>
+               <div class="govuk-grid-column-one-half">
+                               <span class="govuk-caption-m">MOT test number</span>
+                               <h2 class="govuk-heading-s">5620 3268 4189</h2>
+                               <span class="govuk-caption-m">Expiry date</span>
+                               <h2 class="govuk-heading-s">17 September 2019</h2>
+                             </div>
+                          </div>
+                          <div class="govuk-grid-row">
+                            <div class="govuk-grid-column-full">
+                              <span class="govuk-caption-m">Advisory and defect information is not available.</span>
+                              <ul class="govuk-list govuk-!-font-weight-bold">
+                                <li class="govuk-!-margin-bottom-0">This information is not available for Northern Ireland. Check your MOT certificate to see this information if you are the vehicle owner.</li>
+                            </div>
+                          </div>
+                      </div><hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible"></div>
         <!--End MOT test-->
 
         <!--Start MOT test-->
         <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
         <div class="govuk-grid-row">
-          <div class="govuk-grid-column-one-third">
-            <span class="govuk-caption-m">Date tested</span>
-            <h2 class="govuk-heading-s govuk-!-margin-bottom-1">11 January 2017</h2>
-            <h2 class="govuk-heading-xl" style="color:#00703c;">PASS</h2>
-          </div>
-          <div class="govuk-grid-column-one-third govuk-!-margin-bottom-5">
-            <span class="govuk-caption-m">Mileage</span>
-            <h2 class="govuk-heading-s">83,345 km</h2>
-            <span class="govuk-caption-m">Test location</span>
-            <h2 class="govuk-heading-s">Belfast MOT Test Centre,<br>66 Balmoral Road,<br>Belfast, BT12 6QL</h2>
-          </div>
-          <div class="govuk-grid-column-one-third">
-            <span class="govuk-caption-m">MOT test number</span>
-            <h2 class="govuk-heading-s">4567 7897 2945</h2>
-            <span class="govuk-caption-m">Expiry date</span>
-            <h2 class="govuk-heading-s">19 January 2018</h2>
-          </div>
-        </div>
+               <div class="govuk-grid-column-one-third">
+                               <span class="govuk-caption-m">Date tested</span>
+                               <h2 class="govuk-heading-s govuk-!-margin-bottom-1">16 September 2017</h2>
+                               <h2 class="govuk-heading-xl" style="color:#00703c;">PASS</h2>
+               </div>
+          <div class="govuk-grid-column-two-thirds">
+            <div class="govuk-grid-row">
+               <div class="govuk-grid-column-one-half govuk-!-margin-bottom-5">
+                               <span class="govuk-caption-m">Mileage</span>
+                               <h2 class="govuk-heading-s">83,345 km</h2>
+                               <span class="govuk-caption-m">Test location</span>
+            <h2 class="govuk-heading-s">Not available for tests carried out in Northern Ireland</h2>
+               </div>
+               <div class="govuk-grid-column-one-half">
+                               <span class="govuk-caption-m">MOT test number</span>
+                               <h2 class="govuk-heading-s">5620 3268 4189</h2>
+                               <span class="govuk-caption-m">Expiry date</span>
+                               <h2 class="govuk-heading-s">15 September 2018</h2>
+                             </div>
+                          </div>
+                          <div class="govuk-grid-row">
+                            <div class="govuk-grid-column-full">
+                              <span class="govuk-caption-m">Advisory and defect information is not available.</span>
+                              <ul class="govuk-list govuk-!-font-weight-bold">
+                                <li class="govuk-!-margin-bottom-0">This information is not available for Northern Ireland. Check your MOT certificate to see this information if you are the vehicle owner.</li>
+                            </div>
+                          </div>
+                      </div><hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible"></div>
         <!--End MOT test-->
 
 
@@ -310,9 +363,8 @@
         </div>
       </div>
       <div id="accordion-default-content-2" class="govuk-accordion__section-content" aria-labelledby="accordion-default-heading-2">
-        <h2 class="govuk-heading-l" style="color:#00703c;">No outstanding safety recalls found</h2>
-        <p class='govuk-body'>This information is provided by the vehicle manufacturer. If you think this information is wrong, contact the vehicle manufacturer's dealership. Please do not contact the DVSA, as we are not able to change the recall status.</p>
-        <p>Was this vehicle recall information useful to you? <a class="govuk-link--no-visited-state" href="#">Tell us your views</a> so we can improve the service. </p>
+        <h2 class="govuk-heading-l" style="color:#00703c;">No safety recalls found.</h2>
+        <p class='govuk-body'>This information is provided by the vehicle manufacturer. If you think the recall information is wrong, contact your local VAUXHALL dealership.</p>
       </div>
     </div>
   </div>
