--- a/app/views/dva/simplekm/summary.html
+++ b/app/views/dva/simplekm/summary.html
@@ -42,6 +42,9 @@
       17 September 2022
     </h1>
       <p>If you think the MOT expiry date or any of the vehicle details are wrong, <a class="govuk-link--no-visited-state" href="contact.html">contact DVA</a>.</p>
+      <div class="govuk-inset-text">
+  MOT test location, defect and advisory information is not available for vehicles tested in Northern Ireland.
+</div>
     </div>
   </div>
 
@@ -73,7 +76,7 @@
                                <span class="govuk-caption-m">Mileage</span>
                                <h2 class="govuk-heading-s">123,248 km</h2>
                                <span class="govuk-caption-m">Test location</span>
-            <h2 class="govuk-heading-s">Unavailable for Northern Ireland</h2>
+            <h2 class="govuk-heading-s">Not available for tests carried out in Northern Ireland</h2>
                </div>
                <div class="govuk-grid-column-one-half">
                                <span class="govuk-caption-m">MOT test number</span>
@@ -84,20 +87,7 @@
             </div>
             <div class="govuk-grid-row">
               <div class="govuk-grid-column-full">
-                <span class="govuk-caption-m">Monitor and repair if necessary (advisories):</span>
-                <ul class="govuk-list govuk-list--bullet govuk-!-font-weight-bold">
-                  <li class="govuk-!-margin-bottom-0">We don't hold this information for MOT tests carried out in Northern Ireland. If you're the vehicle owner, please refer to your MOT certificate.</li>
-                </ul>
-                <details class="govuk-details" data-module="govuk-details">
-                  <summary class="govuk-details__summary">
-                    <span class="govuk-details__summary-text">
-                      What are advisories?
-                    </span>
-                  </summary>
-                  <div class="govuk-details__text">
-                    Advisories are given for guidance. Some of these may need to be monitored in case they become more serious and need immediate repairs.
-                  </div>
-                </details>
+
               </div>
             </div>
         </div><hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible"></div>
@@ -117,33 +107,20 @@
                                <span class="govuk-caption-m">Mileage</span>
                                <h2 class="govuk-heading-s">114,120 km</h2>
                                <span class="govuk-caption-m">Test location</span>
-            <h2 class="govuk-heading-s">Unavailable for Northern Ireland</h2>
+            <h2 class="govuk-heading-s">Not available for tests carried out in Northern Ireland</h2>
                </div>
                <div class="govuk-grid-column-one-half">
                                <span class="govuk-caption-m">MOT test number</span>
                                <h2 class="govuk-heading-s">4901 5248 5547</h2>
 
-               </div>
-            </div>
-            <div class="govuk-grid-row">
-              <div class="govuk-grid-column-full">
-                <span class="govuk-caption-m">Do not drive until repaired (dangerous defects):</span>
-                <ul class="govuk-list govuk-list--bullet govuk-!-font-weight-bold">
-                  <li class="govuk-!-margin-bottom-0">We don't hold this information for MOT tests carried out in Northern Ireland. If you're the vehicle owner, please refer to your MOT certificate.</li>
-                </ul>
-                <details class="govuk-details" data-module="govuk-details">
-                  <summary class="govuk-details__summary">
-                    <span class="govuk-details__summary-text">
-                      What are defects?
-                    </span>
-                  </summary>
-                  <div class="govuk-details__text">
-                    Major defects may compromise the safety of the vehicle, put other road users at risk, or harm the environment. A vehicle with a major defect will fail the test.
-                  </div>
-                </details>
-              </div>
-            </div>
-        </div><hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible"></div>
+                             </div>
+                          </div>
+                          <div class="govuk-grid-row">
+                            <div class="govuk-grid-column-full">
+
+                            </div>
+                          </div>
+                      </div><hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible"></div>
         <!--End MOT test-->
 
         <!--Start MOT test-->
@@ -160,34 +137,21 @@
                                <span class="govuk-caption-m">Mileage</span>
                                <h2 class="govuk-heading-s">123,248 km</h2>
                                <span class="govuk-caption-m">Test location</span>
-            <h2 class="govuk-heading-s">Unavailable for Northern Ireland</h2>
+            <h2 class="govuk-heading-s">Not available for tests carried out in Northern Ireland</h2>
                </div>
                <div class="govuk-grid-column-one-half">
                                <span class="govuk-caption-m">MOT test number</span>
                                <h2 class="govuk-heading-s">5620 3268 4189</h2>
                                <span class="govuk-caption-m">Expiry date</span>
                                <h2 class="govuk-heading-s">12 September 2021</h2>
-               </div>
-            </div>
-            <div class="govuk-grid-row">
-              <div class="govuk-grid-column-full">
-                <span class="govuk-caption-m">Monitor and repair if necessary (advisories):</span>
-                <ul class="govuk-list govuk-list--bullet govuk-!-font-weight-bold">
-                  <li class="govuk-!-margin-bottom-0">We don't hold this information for MOT tests carried out in Northern Ireland. If you're the vehicle owner, please refer to your MOT certificate.</li>
-                </ul>
-                <details class="govuk-details" data-module="govuk-details">
-                  <summary class="govuk-details__summary">
-                    <span class="govuk-details__summary-text">
-                      What are advisories?
-                    </span>
-                  </summary>
-                  <div class="govuk-details__text">
-                    Advisories are given for guidance. Some of these may need to be monitored in case they become more serious and need immediate repairs.
-                  </div>
-                </details>
-              </div>
-            </div>
-        </div><hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible"></div>
+                             </div>
+                          </div>
+                          <div class="govuk-grid-row">
+                            <div class="govuk-grid-column-full">
+
+                            </div>
+                          </div>
+                      </div><hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible"></div>
         <!--End MOT test-->
 
         <!--Start MOT test-->
@@ -204,34 +168,21 @@
                                <span class="govuk-caption-m">Mileage</span>
                                <h2 class="govuk-heading-s">123,248 km</h2>
                                <span class="govuk-caption-m">Test location</span>
-            <h2 class="govuk-heading-s">Unavailable for Northern Ireland</h2>
+            <h2 class="govuk-heading-s">Not available for tests carried out in Northern Ireland</h2>
                </div>
                <div class="govuk-grid-column-one-half">
                                <span class="govuk-caption-m">MOT test number</span>
                                <h2 class="govuk-heading-s">5620 3268 4189</h2>
                                <span class="govuk-caption-m">Expiry date</span>
                                <h2 class="govuk-heading-s">10 September 2020</h2>
-               </div>
-            </div>
-            <div class="govuk-grid-row">
-              <div class="govuk-grid-column-full">
-                <span class="govuk-caption-m">Monitor and repair if necessary (advisories):</span>
-                <ul class="govuk-list govuk-list--bullet govuk-!-font-weight-bold">
-                  <li class="govuk-!-margin-bottom-0">We don't hold this information for MOT tests carried out in Northern Ireland. If you're the vehicle owner, please refer to your MOT certificate.</li>
-                </ul>
-                <details class="govuk-details" data-module="govuk-details">
-                  <summary class="govuk-details__summary">
-                    <span class="govuk-details__summary-text">
-                      What are advisories?
-                    </span>
-                  </summary>
-                  <div class="govuk-details__text">
-                    Advisories are given for guidance. Some of these may need to be monitored in case they become more serious and need immediate repairs.
-                  </div>
-                </details>
-              </div>
-            </div>
-        </div><hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible"></div>
+                             </div>
+                          </div>
+                          <div class="govuk-grid-row">
+                            <div class="govuk-grid-column-full">
+
+                            </div>
+                          </div>
+                      </div><hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible"></div>
         <!--End MOT test-->
 
         <!--Start MOT test-->
@@ -248,33 +199,19 @@
                                <span class="govuk-caption-m">Mileage</span>
                                <h2 class="govuk-heading-s">114,120 km</h2>
                                <span class="govuk-caption-m">Test location</span>
-            <h2 class="govuk-heading-s">Unavailable for Northern Ireland</h2>
+            <h2 class="govuk-heading-s">Not available for tests carried out in Northern Ireland</h2>
                </div>
                <div class="govuk-grid-column-one-half">
                                <span class="govuk-caption-m">MOT test number</span>
                                <h2 class="govuk-heading-s">4901 5248 5547</h2>
 
-               </div>
-            </div>
-            <div class="govuk-grid-row">
-              <div class="govuk-grid-column-full">
-                <span class="govuk-caption-m">Do not drive until repaired (dangerous defects):</span>
-                <ul class="govuk-list govuk-list--bullet govuk-!-font-weight-bold">
-                  <li class="govuk-!-margin-bottom-0">We don't hold this information for MOT tests carried out in Northern Ireland. If you're the vehicle owner, please refer to your MOT certificate.</li>
-                </ul>
-                <details class="govuk-details" data-module="govuk-details">
-                  <summary class="govuk-details__summary">
-                    <span class="govuk-details__summary-text">
-                      What are defects?
-                    </span>
-                  </summary>
-                  <div class="govuk-details__text">
-                    Major defects may compromise the safety of the vehicle, put other road users at risk, or harm the environment. A vehicle with a major defect will fail the test.
-                  </div>
-                </details>
-              </div>
-            </div>
-        </div><hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible"></div>
+                             </div>
+                          </div>
+                          <div class="govuk-grid-row">
+                            <div class="govuk-grid-column-full">
+                            </div>
+                          </div>
+                      </div><hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible"></div>
         <!--End MOT test-->
 
         <!--Start MOT test-->
@@ -291,34 +228,21 @@
                                <span class="govuk-caption-m">Mileage</span>
                                <h2 class="govuk-heading-s">123,248 km</h2>
                                <span class="govuk-caption-m">Test location</span>
-            <h2 class="govuk-heading-s">Unavailable for Northern Ireland</h2>
+            <h2 class="govuk-heading-s">Not available for tests carried out in Northern Ireland</h2>
                </div>
                <div class="govuk-grid-column-one-half">
                                <span class="govuk-caption-m">MOT test number</span>
                                <h2 class="govuk-heading-s">5620 3268 4189</h2>
                                <span class="govuk-caption-m">Expiry date</span>
                                <h2 class="govuk-heading-s">14 September 2019</h2>
-               </div>
-            </div>
-            <div class="govuk-grid-row">
-              <div class="govuk-grid-column-full">
-                <span class="govuk-caption-m">Monitor and repair if necessary (advisories):</span>
-                <ul class="govuk-list govuk-list--bullet govuk-!-font-weight-bold">
-                  <li class="govuk-!-margin-bottom-0">We don't hold this information for MOT tests carried out in Northern Ireland. If you're the vehicle owner, please refer to your MOT certificate.</li>
-                </ul>
-                <details class="govuk-details" data-module="govuk-details">
-                  <summary class="govuk-details__summary">
-                    <span class="govuk-details__summary-text">
-                      What are advisories?
-                    </span>
-                  </summary>
-                  <div class="govuk-details__text">
-                    Advisories are given for guidance. Some of these may need to be monitored in case they become more serious and need immediate repairs.
-                  </div>
-                </details>
-              </div>
-            </div>
-        </div><hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible"></div>
+                             </div>
+                          </div>
+                          <div class="govuk-grid-row">
+                            <div class="govuk-grid-column-full">
+
+                            </div>
+                          </div>
+                      </div><hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible"></div>
         <!--End MOT test-->
 
         <!--Start MOT test-->
@@ -335,34 +259,21 @@
                                <span class="govuk-caption-m">Mileage</span>
                                <h2 class="govuk-heading-s">123,248 km</h2>
                                <span class="govuk-caption-m">Test location</span>
-            <h2 class="govuk-heading-s">Unavailable for Northern Ireland</h2>
+            <h2 class="govuk-heading-s">Not available for tests carried out in Northern Ireland</h2>
                </div>
                <div class="govuk-grid-column-one-half">
                                <span class="govuk-caption-m">MOT test number</span>
                                <h2 class="govuk-heading-s">5620 3268 4189</h2>
                                <span class="govuk-caption-m">Expiry date</span>
                                <h2 class="govuk-heading-s">10 September 2018</h2>
-               </div>
-            </div>
-            <div class="govuk-grid-row">
-              <div class="govuk-grid-column-full">
-                <span class="govuk-caption-m">Monitor and repair if necessary (advisories):</span>
-                <ul class="govuk-list govuk-list--bullet govuk-!-font-weight-bold">
-                  <li class="govuk-!-margin-bottom-0">We don't hold this information for MOT tests carried out in Northern Ireland. If you're the vehicle owner, please refer to your MOT certificate.</li>
-                </ul>
-                <details class="govuk-details" data-module="govuk-details">
-                  <summary class="govuk-details__summary">
-                    <span class="govuk-details__summary-text">
-                      What are advisories?
-                    </span>
-                  </summary>
-                  <div class="govuk-details__text">
-                    AAdvisories are given for guidance. Some of these may need to be monitored in case they become more serious and need immediate repairs.
-                  </div>
-                </details>
-              </div>
-            </div>
-        </div><hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible"></div>
+                             </div>
+                          </div>
+                          <div class="govuk-grid-row">
+                            <div class="govuk-grid-column-full">
+
+                            </div>
+                          </div>
+                      </div><hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible"></div>
         <!--End MOT test-->
 
 
@@ -380,10 +291,9 @@
         </div>
       </div>
       <div id="accordion-default-content-2" class="govuk-accordion__section-content" aria-labelledby="accordion-default-heading-2">
-        <h2 class="govuk-heading-l" style="color:#00703c;">No outstanding safety recalls found</h2>
+        <h2 class="govuk-heading-l" style="color:#00703c;">No safety recalls found.</h2>
           </strong>
-        <p class='govuk-body'>This information is provided by the vehicle manufacturer. If you think this information is wrong, contact the vehicle manufacturer's dealership. Please do not contact the DVSA, as we are not able to change the recall status.</p>
-        <p>Was this vehicle recall information useful to you? <a class="govuk-link--no-visited-state" href="#">Tell us your views</a> so we can improve the service. </p>
+        <p class='govuk-body'>This information is provided by the vehicle manufacturer. If you think the recall information is wrong, contact your local VAUXHALL dealership.</p>
       </div>
     </div>
   </div>
