content correction for HGV

--- a/app/views/dva/hgvsimple/summary.html
+++ b/app/views/dva/hgvsimple/summary.html
@@ -43,7 +43,7 @@
     </h1>
       <p>If you think the MOT expiry date or any of the vehicle details are wrong, <a class="govuk-link--no-visited-state" href="contact.html">contact DVA</a>.</p>
       <div class="govuk-inset-text">
-  MOT test location, defect and advisory information is not available for vehicles tested in Northern Ireland.
+  Test failure information is not available for vehicles tested in Northern Ireland.
 </div>
     </div>
   </div>
