Update contact dvsa link
updated link on mixed pages on the contact dvsa to mirror the live service

--- a/app/views/dva/hgvmixed/summary.html
+++ b/app/views/dva/hgvmixed/summary.html
@@ -42,7 +42,7 @@
       2 November 2022
     </h1>
     <p><a class="govuk-link--no-visited-state" href="">Get an annual test reminder</a> if your vehicle is registered in Great Britain (England, Scotland or Wales).</p>
-      <p>If you think the MOT expiry date or any of the vehicle details are wrong:<ul class="govuk-list govuk-list--bullet govuk"><li> <a class="govuk-link--no-visited-state" href="contact.html">contact DVA</a> for tests carried out in Northern Ireland<li> <a class="govuk-link--no-visited-state" href="contactdvsa.html">contact DVSA</a> for tests carried out in Great Brtitain</ul></p>
+      <p>If you think the MOT expiry date or any of the vehicle details are wrong:<ul class="govuk-list govuk-list--bullet govuk"><li> <a class="govuk-link--no-visited-state" href="contact.html">contact DVA</a> for tests carried out in Northern Ireland<li> <a class="govuk-link--no-visited-state" href="https://www.gov.uk/getting-an-mot/correcting-mot-certificate-mistakes">contact DVSA</a> for tests carried out in Great Brtitain</ul></p>
       <div class="govuk-inset-text">
         <p>The mileage recorded at test is not currently available for heavy goods and public service vehicles.<br> It can take up to 10 working days for the latest test results to appear.</p>
   <p>Test failure information is not available for vehicles tested in Northern Ireland.</p>
