--- a/app/views/dva/mixedkm/summary.html
+++ b/app/views/dva/mixedkm/summary.html
@@ -42,7 +42,7 @@
       17 September 2022
     </h1>
     <p><a class="govuk-link--no-visited-state" href="">Get an MOT reminder</a> or <a class="govuk-link--no-visited-state" href="">download test certificates</a> if your vehicle is registered in Great Britain (England, Scotland or Wales).</p>
-      <p>If you think the MOT expiry date or any of the vehicle details are wrong:<ul class="govuk-list govuk-list--bullet govuk"><li> <a class="govuk-link--no-visited-state" href="contact.html">contact DVA</a> for tests carried out in Northern Ireland<li> <a class="govuk-link--no-visited-state" href="contactdvsa.html">contact DVSA</a> for tests carried out in Great Brtitain</ul></p>
+      <p>If you think the MOT expiry date or any of the vehicle details are wrong:<ul class="govuk-list govuk-list--bullet govuk"><li> <a class="govuk-link--no-visited-state" href="contact.html">contact DVA</a> for tests carried out in Northern Ireland<li> <a class="govuk-link--no-visited-state" href="https://www.gov.uk/getting-an-mot/correcting-mot-certificate-mistakes">contact DVSA</a> for tests carried out in Great Brtitain</ul></p>
       <div class="govuk-inset-text">
   MOT test location, defect and advisory information is not available for vehicles tested in Northern Ireland.
 </div>
