--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -967,15 +967,19 @@ margin-top: 50px !important;
   position: relative;
   display: inline-block;
   margin-right: 10px;
-  margin-bottom: -9px;
-  height: 25px;
-  width: 25px;
-  background: transparent url("/public/images/mini-button-spinner.svg") no-repeat;
-  background-size: 25px 25px;
+  margin-bottom: -7px;
+  margin-top: 0px;
+  height: 20px;
+  width: 20px;
+  /* background: transparent url("/public/images/mini-button-spinner.svg") no-repeat;
+  background-size: 25px 25px; */
   animation-name: spin;
   animation-duration: 0.75s;
   animation-iteration-count: infinite;
   transform-origin: 50% 50%;
+  border: 2px solid #b1b4b6;
+  border-radius: 50%;
+  border-top-color: #FFFFFF;
 }
 @keyframes spin {
   0% {
