Updated ANPR index page with version 3

--- a/app/views/ANPR/anpr-index.html
+++ b/app/views/ANPR/anpr-index.html
@@ -19,13 +19,13 @@
 
         <div class="index-view-proto">
           <h2 class="govuk-heading-m">Latest prototype for testing <strong class="govuk-tag govuk-tag--blue">
-  V.2.1
+  V.3
 </strong></h2>
 
 
-          <a href="version-2-1/happy/start.html" class="govuk-button">Photo accepted</a>
-          <a href="version-2-1/unhappy/start.html" class="govuk-button govuk-button--secondary">Photo rejected</a>
-          <a href="version-2/sandbox/no-results-found.html" class="govuk-button govuk-button--secondary">No results</a>
+          <a href="version-3/happy/start.html" class="govuk-button">Photo accepted</a>
+          <a href="version-3/unhappy/start.html" class="govuk-button govuk-button--secondary">Photo rejected</a>
+          <a href="version-3/sandbox/no-results-found.html" class="govuk-button govuk-button--secondary">No results</a>
 
           <p>Camera function will use the device’s native state. </p>
           <p>On laptop, the user will be prompted to upload a photo, on phone / tablet the user will be prompted to take a picture. </p>
